posts/9b6cacc0-06eb-457e-95af-45637b9b5277/contents/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: $NAMESPACE
  namespace: $NAMESPACE
spec:
  replicas: 3
  selector:
    matchLabels:
      app: $NAMESPACE
  template:
    metadata:
      labels:
        app: $NAMESPACE
    spec:
      containers:
        - name: $NAMESPACE
          image: $CONTAINER_IMAGE
          imagePullPolicy: Always
          ports:
            - containerPort: $CONTAINER_PORT
      imagePullSecrets:
        - name: regcred
  strategy:
    blueGreen:
      activeService: $NAMESPACE
      autoPromotionEnabled: false
