posts/9b6cacc0-06eb-457e-95af-45637b9b5277/contents/service_preview.yaml
apiVersion: v1
kind: Service
metadata:
  name: $NAMESPACE-preview
  namespace: $NAMESPACE
spec:
  selector:
    app: $NAMESPACE
  ports:
    - protocol: TCP
      port: $CONTAINER_PORT
      targetPort: $CONTAINER_PORT
