posts/9b6cacc0-06eb-457e-95af-45637b9b5277/contents/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $NAMESPACE
  namespace: $NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: letsencrypt
spec:
  tls:
    - hosts:
        - $DOMAIN
      secretName: letsencrypt-tls
  rules:
    - host: $DOMAIN
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: $NAMESPACE
                port:
                  number: $CONTAINER_PORT
